test/test_11710503_3.spl
struct foo{
    int a[10];
};
int main(){
    int i = nononono();
    int j = 1;
    struct foo k;
    k.a[0] = 1;
    j = j + k;
}